docs: update index.html style.css

--- a/index.html
+++ b/index.html
@@ -1,1 +1,78 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <title>My CV</title>
+</head>
+<body>
+    <header class="header">
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#code-example" class="nav-link">Code Example</a></li>
+                <li><a href="#experience" class="nav-link">Experience</a></li>
+                <li><a href="#education-languages" class="nav-link">Education & Languages</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div>
+            <img src="assets/img/image.webp" width="300" height="200" alt="profile picture">
+        </div>
+    </header>
+    <main class="main">
+        <div class="container">
+            <section class="section" id="about">
+                <h1 class="section.title">Fiodar Yatsenka</h1>
+                <p>MSQ/MSK | Marketing & Developing</p>
+                <ul>
+                    <li><a href="https://t.me/pulyavzubah">telegram</a></li>
+                    <li><a href="https://discord.com/users/980852726613286953">discord</a></li>
+                    <li><a href="tel:+79268334762">phone</a></li>
+                    <li><a href="mailto:yatsenkof@gmail.com">email</a></li>
+                </ul>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section.title">Skills</h2>
+                    <ul>
+                        <li>HTML, CSS</li>
+                        <li>Git, GitHub</li>
+                        <li>VS Code</li>
+                    </ul>
+            </section>
+            <section class="section" id="code-example">
+                <h2 class="section.title">Code Example</h2>
+                <code>&lt;code&gt;The code you are looking for is currently not available. Please, check back later&lt;/code&gt;</code>
+            </section>
+            <section class="section" id="experience">
+                <h2 class="section.title">Experience</h2>
+                <ul>
+                    <li>sales, marketing & advertising in <a href="https://kopirka.by/">kopirka.by</a> (2012 — present)</li>
+                    <li>marketing & advertising in <a href="https://likegym.ru/">likegym.ru</a> (2021 — 2022)</li>
+                    <li>advertising in <a href="http://homegarden.by/">homegarden.by</a> (2019 — 2020)</li>
+                    <li>advertising in <a href="https://xn--j1abip.xn--90ais/">толк.бел</a> (2018)</li>
+                </ul>
+            </section>
+            <section class="section" id="education-languages">
+                <h2 class="section.title">Education & Languages</h2>
+                <p>BSEU | Finance (Minsk, Belarus)</p>
+                <p>Native Russian</p>
+                <p>Intermediate English</p>
+            </section>
+        </div>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <p><a href="https://github.com/pulyavzubah" target="_blank"><img src="assets/img/github.png" alt="github Logo" width="175" height="100"></a></p>
+            <p>2022<a href="https://rs.school/js/" target="_blank"><img src="assets/svg/rs_school_js.svg" alt="RS School Logo" width="300" height="200"></a></p>
+        </div>
+    </footer>
+</body>
+</html>
