docs: update index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#skills" class="nav-link">Skills</a></li>
                 <li><a href="#code-example" class="nav-link">Code Example</a></li>
                 <li><a href="#experience" class="nav-link">Experience</a></li>
-                <li><a href="#education-languages" class="nav-link">Education & Languages</a></li>
+                <li><a href="#education-languages" class="nav-link">Education &amp; Languages</a></li>
                 </ul>
             </nav>
         </div>
@@ -31,7 +31,7 @@
         <div class="container">
             <section class="section" id="about">
                 <h1 class="section.title">Fiodar Yatsenka</h1>
-                <p>MSQ/MSK | Marketing & Developing</p>
+                <p>MSQ/MSK | Marketing &amp; Developing</p>
                 <ul>
                     <li><a href="https://t.me/pulyavzubah">telegram</a></li>
                     <li><a href="https://discord.com/users/980852726613286953">discord</a></li>
@@ -54,14 +54,14 @@
             <section class="section" id="experience">
                 <h2 class="section.title">Experience</h2>
                 <ul>
-                    <li>sales, marketing & advertising in <a href="https://kopirka.by/">kopirka.by</a> (2012 — present)</li>
-                    <li>marketing & advertising in <a href="https://likegym.ru/">likegym.ru</a> (2021 — 2022)</li>
+                    <li>sales, marketing &amp; advertising in <a href="https://kopirka.by/">kopirka.by</a> (2012 — present)</li>
+                    <li>marketing &amp; advertising in <a href="https://likegym.ru/">likegym.ru</a> (2021 — 2022)</li>
                     <li>advertising in <a href="http://homegarden.by/">homegarden.by</a> (2019 — 2020)</li>
                     <li>advertising in <a href="https://xn--j1abip.xn--90ais/">толк.бел</a> (2018)</li>
                 </ul>
             </section>
             <section class="section" id="education-languages">
-                <h2 class="section.title">Education & Languages</h2>
+                <h2 class="section.title">Education &amp; Languages</h2>
                 <p>BSEU | Finance (Minsk, Belarus)</p>
                 <p>Native Russian</p>
                 <p>Intermediate English</p>
